# ATTACK-Python-Client

./: .buildinfo  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  genindex.html  intro.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
_sources/playground/: 3-Export_All_Techniques_To_CSV.ipynb  5-Collect_Techniques_by_Data_Sources.ipynb  6-Explore_ICS_Attack.ipynb  7-Export_Groups_Navigator_Layers.ipynb  Export_All_Techniques.ipynb
attackcti/: __init__.py  attack_api.py  models.py
attackcti/utils/: downloader.py  storage.py
docs/: CNAME  _config.yml  _toc.yml  intro.ipynb
docs/playground/: 0-Download-ATTACK-STIX-Data.ipynb  1-Collect_All_Functions.ipynb  10-Export_All_Techniques_To_YAML.ipynb  11-Initialize_Client_Local_STIX_data.ipynb  12-Local_vs_TAXII_STIX_20_21.ipynb  2-Collect_Matrix_Specific_Functions.ipynb  3-Export_All_Techniques_To_CSV.ipynb  4-Explore_Data_Sources.ipynb  5-Collect_Techniques_by_Data_Sources.ipynb  6-Explore_ICS_Attack.ipynb  7-Export_Groups_Navigator_Layers.ipynb  8-Lookup_Functions.ipynb  9-Explore_Campaigns.ipynb  9-cti_summit_2022_explorando_fuentes_componentes_datos.ipynb  ATT&CK_DataSources.ipynb  ICS_ATTACK_Exploration.ipynb  Usage_Basics.ipynb  Usage_Filters.ipynb  all_techniques_non_stix.csv  all_techniques_stix.csv  export_groups_navigator_layers.ipynb  requirements.txt  techniques_by_datasources.ipynb
docs/presentations/: 1-SANS_CTI_Summit_2022_Explorando_Fuentes_Componentes_Datos.ipynb
docs/source/: attackcti_functions.rst  attackcti_overview.rst  conf.py  index.rst  license.rst  oasis_overview.rst  stix.rst  taxii_client.rst
export_example/: all_attack.xlsx  ~$all_attack.xlsx
export_examples/: all_techniques.csv
export_examples/csv/: all_techniques_no_stix.csv  all_techniques_stix.csv
export_examples/helk_cti/: install-helk-cti.sh
export_examples/navigator/: ALLANITE_G1000.json  APT-C-36_G0099.json  APT12_G0005.json  APT16_G0023.json  APT17_G0025.json  APT18_G0026.json  APT19_G0073.json  APT1_G0006.json  APT28_G0007.json  APT29_G0016.json  APT30_G0013.json  APT32_G0050.json  APT33_G0064.json  APT37_G0067.json  APT38_G0082.json  APT39_G0087.json  APT3_G0022.json  APT41_G0096.json  Ajax Security Team_G0130.json  Axiom_G0001.json  BRONZE BUTLER_G0060.json  BlackOasis_G0063.json  BlackTech_G0098.json  Blue Mockingbird_G0108.json  Bouncing Golf_G0097.json  Carbanak_G0008.json  Chimera_G0114.json  Cleaver_G0003.json  Cobalt Group_G0080.json  CopyKittens_G0052.json  Dark Caracal_G0070.json  DarkHydrus_G0079.json  DarkVishnya_G0105.json  Darkhotel_G0012.json  Deep Panda_G0009.json  Dragonfly 2.0_G0074.json  Dragonfly_G0035.json  Dust Storm_G0031.json  Elderwood_G0066.json  Equation_G0020.json  (+82 more)
integrations/: export_attack.py
integrations/helk_cti/: README.md  docker-compose.yml
notebooks/: ATT&CK_DataSources (1).ipynb  ATT&CK_DataSources.ipynb  Export_All_Techniques.ipynb  ICS_ATTACK_Exploration.ipynb  Usage_Basics.ipynb  Usage_Filters.ipynb  all_attack.xlsx  export_groups_navigator_layers.ipynb  techniques_by_datasources.ipynb
playground/: 1-Collect_All_Functions.html  2-Collect_Matrix_Specific_Functions.html  3-Export_All_Techniques_To_CSV.html  4-Explore_Data_Sources.html  5-Collect_Techniques_by_Data_Sources.html  6-Explore_ICS_Attack.html  7-Export_Groups_Navigator_Layers.html  8-Lookup_Functions.html  9-Explore_Campaigns.html  ATT&CK_DataSources.html  Export_All_Techniques.html  ICS_ATTACK_Exploration.html  Usage_Basics.html  Usage_Filters.html  export_groups_navigator_layers.html  techniques_by_datasources.html
presentations/: 1-SANS_CTI_Summit_2022_Explorando_Fuentes_Componentes_Datos.html
src/attackcti/: __init__.py  __main__.py  attack_api.py  cli.py  client.py  constants.py  domains.py  legacy.py  models.py  query.py  relationships.py
tests/: conftest.py  test_core_clients.py  test_detections.py  test_groups.py  test_relationships.py  test_techniques.py
tests/fixtures/: simple_attack_bundle.json
tests/integration/: conftest.py  (+4 more)
(+62 files in other folders)
