[project]
name = "attackcti"
version = "0.6.4"
description = "MITRE ATT&CK CTI Python library"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Cyb3rWard0g", email = "9653181+Cyb3rWard0g@users.noreply.github.com" }
]
requires-python = ">=3.9"
keywords = [
    "threat hunting",
    "dfir",
    "cti",
    "cyber threat intelligence",
    "mitre att&ck",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "six>=1.17.0",
    "stix2>=3.0.1",
    "stix2-patterns>=2.0.0",
    "taxii2-client>=2.3.0",
]

[project.urls]
Documentation = "https://attackcti.com"
Code = "https://github.com/OTRF/ATTACK-Python-Client"
"Issue tracker" = "https://github.com/OTRF/ATTACK-Python-Client/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23",
    "pyright>=1.1.407",
    "ruff>=0.14.6",
    "black",
    "anyio>=4",
    "build",
    "twine",
    "packaging",
    "setuptools",
    "setuptools_scm",
    "wheel",
]

[project.scripts]
attackcti = "attackcti.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/attackcti"]
include = ["src/attackcti/py.typed"]

[tool.ruff]
line-length = 120
extend-exclude = [
    "docs/playground",
]

[tool.ruff.lint]
select = ["E", "F", "I", "D", "B"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
pythonpath = ["src"]
norecursedirs = ["repos", ".venv"]
markers = [
  "integration: tests that spin a real local ipykernel; require RUN_INTEGRATION=1",
]
